--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port=8080
+#server.port=8080
 spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
@@ -10,6 +10,7 @@ logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
 # TODO Append connection to DB
+#????? ???????????? ? PostgreSQL ????? ???????? ??????? dev, ? ????? ???????????? H2 - ci ??? test
 #spring.config.activate.on-profile=local
 #spring.datasource.driverClassName=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgresql://localhost:6542/shareit
