--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,13 +12,14 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 # TODO Append connection to DB
 #????? ???????????? ? PostgreSQL ????? ???????? ??????? dev, ? ????? ???????????? H2 - ci ??? test
 #spring.config.activate.on-profile=local
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:6542/shareit
-#spring.datasource.username=shareit
-#spring.datasource.password=shareit
+spring.config.activate.on-profile=dev
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:6541/shareit
+spring.datasource.username=shareit
+spring.datasource.password=shareit
 
-spring.config.activate.on-profile=ci,test
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:shareit
-spring.datasource.username=test
-spring.datasource.password=test
+#spring.config.activate.on-profile=ci,test
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:shareit
+#spring.datasource.username=test
+#spring.datasource.password=test
