--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,22 @@
-#server.port=8080
 spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
+spring.jpa.hibernate.jdbc.time_zone=UTC
 
 logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
-# TODO Append connection to DB
-#????? ???????????? ? PostgreSQL ????? ???????? ??????? dev, ? ????? ???????????? H2 - ci ??? test
-#spring.config.activate.on-profile=local
-spring.config.activate.on-profile=dev
+#---
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:6541/shareit
+spring.datasource.url=jdbc:postgresql://localhost:6432/shareit
 spring.datasource.username=shareit
 spring.datasource.password=shareit
+#---
 
-#spring.config.activate.on-profile=ci,test
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.url=jdbc:h2:mem:shareit
-#spring.datasource.username=test
-#spring.datasource.password=test
+spring.config.activate.on-profile=ci,test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:shareit
+spring.datasource.username=test
+spring.datasource.password=test
